; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs/extr_fs-loader.c_svn_fs_upgrade2.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/subversion/subversion/libsvn_fs/extr_fs-loader.c_svn_fs_upgrade2.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 (i32*, i8*, i32, i8*, i32, i8*, i32, i32*, i32)* }

@common_pool_lock = common dso_local global i32 0, align 4
@common_pool = common dso_local global i32 0, align 4
@SVN_NO_ERROR = common dso_local global i32* null, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @svn_fs_upgrade2(i8* %0, i32 %1, i8* %2, i32 %3, i8* %4, i32* %5) #0 {
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i8*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i8*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.TYPE_3__*, align 8
  %14 = alloca i32*, align 8
  store i8* %0, i8** %7, align 8
  store i32 %1, i32* %8, align 4
  store i8* %2, i8** %9, align 8
  store i32 %3, i32* %10, align 4
  store i8* %4, i8** %11, align 8
  store i32* %5, i32** %12, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = load i32*, i32** %12, align 8
  %17 = call i32 @fs_library_vtable(%struct.TYPE_3__** %13, i8* %15, i32* %16)
  %18 = call i32 @SVN_ERR(i32 %17)
  %19 = load i32*, i32** %12, align 8
  %20 = call i32* @fs_new(i32* null, i32* %19)
  store i32* %20, i32** %14, align 8
  %21 = load %struct.TYPE_3__*, %struct.TYPE_3__** %13, align 8
  %22 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %21, i32 0, i32 0
  %23 = load i32 (i32*, i8*, i32, i8*, i32, i8*, i32, i32*, i32)*, i32 (i32*, i8*, i32, i8*, i32, i8*, i32, i32*, i32)** %22, align 8
  %24 = load i32*, i32** %14, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = load i32, i32* %8, align 4
  %27 = load i8*, i8** %9, align 8
  %28 = load i32, i32* %10, align 4
  %29 = load i8*, i8** %11, align 8
  %30 = load i32, i32* @common_pool_lock, align 4
  %31 = load i32*, i32** %12, align 8
  %32 = load i32, i32* @common_pool, align 4
  %33 = call i32 %23(i32* %24, i8* %25, i32 %26, i8* %27, i32 %28, i8* %29, i32 %30, i32* %31, i32 %32)
  %34 = call i32 @SVN_ERR(i32 %33)
  %35 = load i32*, i32** @SVN_NO_ERROR, align 8
  ret i32* %35
}

declare dso_local i32 @SVN_ERR(i32) #1

declare dso_local i32 @fs_library_vtable(%struct.TYPE_3__**, i8*, i32*) #1

declare dso_local i32* @fs_new(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
